# seminar-assess-x

./: .gitignore  .prettierignore  .prettierrc  Cargo.toml  data  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  rustfmt-nightly.toml  turbo.json
.github/workflows/: release.yaml
apps/admin/: package.json  tsconfig.json
apps/admin/src/routes/: +page.svelte
apps/android/: package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
apps/android/src/: app.css  app.html
apps/android/src/lib/: axios-instance.ts  constants.ts  state.svelte.js  store.ts  types.ts  utils.ts
apps/android/src/lib/components/: LoadingBar.svelte  Skeleton.svelte  Snackbar.svelte  TopAppBar.svelte
apps/android/src/lib/data/: evaluation.ts
apps/android/src/lib/styles/: font.css  index.css  prose.css
apps/android/src/lib/utils/: fetch.ts  index.ts  localstorage.ts  navigation.ts  session.ts
apps/android/src/routes/: +error.svelte  +layout.svelte  +page.svelte  +page.ts
apps/server/: package.json  svelte.config.js  tsconfig.json  vite.config.ts
apps/server/prisma/: schema.prisma  seed.ts
apps/server/src/: app.d.ts  hooks.server.ts
apps/server/src/lib/: auth.ts  otp.ts  prisma.ts  utils.ts
crates/seminar-assess-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.conf.release.json
crates/seminar-assess-tauri/capabilities/: main.json
crates/seminar-assess-tauri/icons/: icon.icns
crates/seminar-assess-tauri/src/: lib.rs  main.rs
scripts/: release.sh  startdb.sh
(+84 files in other folders)
