[package]
name = "seminar-assess-tauri"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[lib]
name = "seminar_assess_tauri_lib"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
tauri = { version = "2.1.1", features = ["unstable"] }

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }
