[package]
name = "seminar-assess-tauri"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[lib]
name = "seminar_assess_tauri_lib"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
once_cell = "1.20.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.1.1", features = ["unstable"] }
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tokio = { workspace = true, features = ["rt-multi-thread"] }

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }
